pkg/agentgateway/plugins/testdata/backendpolicy/gcpauth.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: id
  namespace: default
spec:
  targetRefs:
    - kind: HTTPRoute
      name: test
      group: gateway.networking.k8s.io
  backend:
    auth:
      gcp:
        type: IdToken
        audience: hello.world.example.com
---
# Output
output:
- Policy:
    backend:
      auth:
        gcp:
          idToken:
            audience: hello.world.example.com
    key: backend/default/id:backend-auth:default/test
    name:
      kind: AgentgatewayPolicy
      name: id
      namespace: default
    target:
      route:
        name: test
        namespace: default
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: agentgateway.dev/agentgateway
